--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,6 @@
 body {
-  background-image: linear-gradient(to right, rgb(62, 141, 42), rgb(124, 216, 112));
+  background-image: linear-gradient(to right, rgb(33, 99, 16), rgb(112, 216, 207));
+}
+div {
+  background-image: linear-gradient(to right, rgb(136, 136, 136), rgb(226, 226, 226));
 }
