--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,6 @@
 body {
-  background-image: linear-gradient(to right, rgb(50, 136, 28), rgb(7, 255, 40));
-  font-size: 10000px;
+ background: #29b314;
+background: linear-gradient(90deg, rgba(41, 179, 20, 1) 0%, rgba(9, 121, 67, 1) 35%, rgba(102, 255, 0, 1) 100%);
 }
 div {
   background-color: rgba(214, 204, 204, 0.075);
