--- a/estilo.css
+++ b/estilo.css
@@ -2,6 +2,8 @@ body {
 background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1) 35%, rgba(74, 171, 10, 1) 100%);
 }
 .cabecalho-img{
-    width: 100%;
+    width: 100%;}
+
+
     .sino{right:100px;}
-}
+
