--- a/estilo.css
+++ b/estilo.css
@@ -8,3 +8,6 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
     display: flex;
 }
 
+.bloco{
+    background-color:#537D5D;
+}
