--- a/estilo.css
+++ b/estilo.css
@@ -9,5 +9,5 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
 }
 
 .bloco{
-    background-color:#537D5D;
+    background-color:#3eb65a;
 }
