--- a/estilo.css
+++ b/estilo.css
@@ -6,6 +6,8 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
 
 .pesquisaloc{
     display: flex;
+
+    justify-content: space-between;
 }
 
 .bloco{
