--- a/estilo.css
+++ b/estilo.css
@@ -14,3 +14,5 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
     background-color:#3eb65a;
 }
 
+.pesquisaloc{    display: grid;
+}
