--- a/estilo.css
+++ b/estilo.css
@@ -16,6 +16,8 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
 
 .pesquisaloc{    display: grid;
 }
+
 .inicio{
     width: 110%;
-    height: 200px;}
+    height: 200px;
+}
