--- a/estilo.css
+++ b/estilo.css
@@ -24,3 +24,5 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
    background-size: contain;
    height: 200px;
 }
+
+.usuario{border-radius:100px;}
