--- a/estilo.css
+++ b/estilo.css
@@ -25,4 +25,4 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
    height: 200px;
 }
 
-.usuario{border-radius:100px;}
+.anuncios{background-color:#D2D0A0;}
