--- a/estilo.css
+++ b/estilo.css
@@ -26,3 +26,5 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
 }
 
 .anuncios{background-color:#D2D0A0;}
+
+.pesquisa{display: flex;}
