--- a/estilo.css
+++ b/estilo.css
@@ -32,6 +32,13 @@ width: 300%;}
 
 .lupa{width:100%;}
 
-.text1{height: 30px;}
+.text1{height: 30px;
+width:30%;}
+
+.text2{height: 30px;
+width:30%;}
+
+
+
 
 
