--- a/estilo.css
+++ b/estilo.css
@@ -25,7 +25,8 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
    height: 200px;
 }
 
-.anuncios{background-color:#D2D0A0;}
+.anuncios{background-color:#D2D0A0;
+height: 100%;}
 
 .pesquisa{display: flex;
 width: 300%;}
