--- a/estilo.css
+++ b/estilo.css
@@ -12,8 +12,7 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
 }
 
 .bloco{
-    background-color:#3eb65a;
-}
+    background-color:#537D5D;}
 
 .pesquisaloc{    display: grid;
     padding: 20px;
