--- a/estilo.css
+++ b/estilo.css
@@ -32,7 +32,8 @@ width: 300%;}
 
 .lupa{width:100%;}
 
-.text1{height: 30px;
+.text1{color:#9EBC8A;
+    height: 30px;
 width:30%;}
 
 .text2{height: 30px;
