--- a/estilo.css
+++ b/estilo.css
@@ -39,7 +39,8 @@ width:30%;}
 .text2{height: 30px;
 width:30%;}
 
-.bloco1{background-color: #7d6253;}
+.bloco1{background-color: #7d6253;
+width: 300px;}
 
 
 
