--- a/estilo.css
+++ b/estilo.css
@@ -12,7 +12,8 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
 }
 
 .bloco{
-    background-color:#537D5D;}
+    background-color:#537D5D;
+height:100%;}
 
 .pesquisaloc{    display: grid;
     padding: 20px;
@@ -39,8 +40,7 @@ width:30%;}
 .text2{height: 30px;
 width:30%;}
 
-.bloco1{background-color: #7d6253;
-width: 300px;}
+.bloco1{background-color: #7d6253;}
 
 
 
