--- a/estilo.css
+++ b/estilo.css
@@ -12,8 +12,7 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
 }
 
 .bloco{
-    background-color:#537D5D;
-height:100%;}
+    background-color:#537D5D;}
 
 .pesquisaloc{    display: grid;
     padding: 20px;
@@ -26,7 +25,7 @@ height:100%;}
 }
 
 .anuncios{background-color:#D2D0A0;
-height: 700%;}
+height: 1200px;}
 
 .pesquisa{display: flex;
 width: 300%;}
@@ -40,7 +39,7 @@ width:30%;}
 .text2{height: 30px;
 width:30%;}
 
-.bloco1{background-color: #7d6253;}
+.bloco1{background-color:#D9D9D9;}
 
 
 
