--- a/estilo.css
+++ b/estilo.css
@@ -46,19 +46,23 @@ width:30%;}
 
 .bloco1{background-color: #D9D9D9;
     height: 500px;
-    width: 450px;}
+    width: 450px;
+margin: 30px;}
 
 .bloco2{background-color: #D9D9D9;
     height: 500px;
-    width: 450px;}
+    width: 450px;
+margin: 30px;}
     
 .bloco3{background-color: #D9D9D9;
     height: 500px;
-    width: 450px;}
+    width: 450px;
+margin: 30px;}
     
 .bloco4{background-color: #D9D9D9;
     height: 500px;
-    width: 450px;}
+    width: 450px;
+margin: 30px;}
 
 
 
