--- a/estilo.css
+++ b/estilo.css
@@ -66,6 +66,8 @@ margin: 30px;}
 
 .chats{background-color:#537D5D;
     height:200px;
+    display: flex;
+    justify-content: space-between;
 
 }
 
