--- a/estilo.css
+++ b/estilo.css
@@ -67,9 +67,14 @@ margin: 30px;}
 .chats{background-color:#537D5D;
     height:200px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 
 }
+
+.coment{height: 30%;}
+.linhas{height: 30%;}
+.casa{height: 30%;}
+.config{height: 30%;}
 
 
 
