--- a/estilo.css
+++ b/estilo.css
@@ -13,7 +13,9 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
 
 .bloco{
     background-color:#537D5D;
-height:100%;}
+height:100%;
+margin-top: 70px;
+}
 
 .pesquisaloc{    display: grid;
     padding: 20px;
@@ -78,7 +80,9 @@ margin: 30px;}
 
 .text3{width: 70%;}
 
-.perfil{background-color:#537D5D;}
+.perfil{background-color:#537D5D;
+margin-top: 70px;
+}
 
 
 
