--- a/estilo.css
+++ b/estilo.css
@@ -78,7 +78,8 @@ margin: 30px;}
 .casa{height: 30%;}
 .config{height: 30%;}
 
-.text3{width: 70%;}
+.text3{width: 70%;
+background-color:#FFFCFB;}
 
 .perfil{background-color:#537D5D;
 margin-top: 70px;
