--- a/estilo.css
+++ b/estilo.css
@@ -79,6 +79,7 @@ margin: 30px;}
 .config{height: 30%;}
 
 .text3{width: 70%;
+    margin: 40px;
 background-color:#FFFCFB;}
 
 .perfil{background-color:#537D5D;
