--- a/estilo.css
+++ b/estilo.css
@@ -92,5 +92,10 @@ margin-top: 70px;
     background-color: #D2D0A0;
 }
 
-.chat1
+.usuario{margin: 30px;}
 
+.chat1{margin: 50px;}
+
+.chat2{margin: 50px;}
+
+.chat3{margin: 50px;}
