--- a/estilo.css
+++ b/estilo.css
@@ -96,6 +96,8 @@ margin-top: 70px;
 
 .chat1{margin: 50px;}
 
-.chat2{margin: 50px;}
+.chat2{margin-left: 300px;}
 
 .chat3{margin: 50px;}
+
+.enviar{background-color: #537D5D;}
