--- a/estilo.css
+++ b/estilo.css
@@ -107,7 +107,8 @@ display: flex;
 }
 
 .text4{width: 70%;
-    margin-left:20px;}
+    margin-left:20px;
+height: 10%;}
 
     .edit{height: 20%;}
 
