--- a/estilo.css
+++ b/estilo.css
@@ -35,7 +35,8 @@ display: flex;
     justify-content: center;}
 
 .pesquisa{display: flex;
-width: 300%;}
+width: 300%;
+align-items: center;}
 
 .lupa{width:100%;}
 
@@ -44,7 +45,7 @@ width: 300%;}
 width:30%;}
 
 .text2{height: 30px;
-width:30%;}
+width:90%;}
 
 .bloco1{background-color: #D9D9D9;
     height: 500px;
@@ -117,3 +118,5 @@ height: 10%;}
     .sent{height: 20%;
     margin: 20px;
     margin-right: 80px;}
+
+    .loc{align-items: center;}
