--- a/estilo.css
+++ b/estilo.css
@@ -9,6 +9,7 @@ background: linear-gradient(90deg, rgba(57, 242, 29, 1) 0%, rgba(12, 166, 91, 1)
 
     justify-content: space-between;
     padding: 20px;
+    align-items: center;
 }
 
 .bloco{
@@ -120,3 +121,5 @@ height: 10%;}
     margin-right: 80px;}
 
     .loc{align-items: center;}
+
+    .sino{height: 220px;}
